<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentSongActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/songNameTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="18dp"
            android:layout_weight="0.25"
            android:gravity="bottom|center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:fontFamily="serif"
            tools:text="@string/first_song_name" />

        <TextView
            android:id="@+id/songSingerTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:gravity="top|center"
            android:textColor="@color/colorPrimary"
            app:fontFamily="serif"
            tools:text="@string/first_song_singer" />

        <TextView
            android:id="@+id/songAlbumTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:gravity="top|center"
            android:textColor="@color/colorAccent"
            android:textSize="12dp"
            app:fontFamily="serif"
            tools:text="@string/first_song_album" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="3"
            app:srcCompat="@drawable/baseline_album_black_48" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/loopImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_loop_black_24" />

            <ImageView
                android:id="@+id/favoriteImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/baseline_favorite_border_black_24" />

            <ImageView
                android:id="@+id/libraryImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/baseline_library_music_black_24" />

            <ImageView
                android:id="@+id/favoritesImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_favorite_border_black_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/loop"
                android:textSize="12sp"
                app:fontFamily="serif" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/add_to_favorites"
                android:textSize="12sp"
                app:fontFamily="serif" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/library"
                android:textSize="12sp"
                app:fontFamily="serif" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fav_songs_label"
                android:textSize="12sp"
                app:fontFamily="serif" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.50"
            android:padding="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/skipPreviousImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/baseline_skip_previous_black_36" />

            <ImageView
                android:id="@+id/playImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_weight="1"
                android:src="@drawable/baseline_play_circle_outline_black_48" />

            <ImageView
                android:id="@+id/skipNextImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/baseline_skip_next_black_36" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>